2007-07-25  Ben Motmans <ben.motmans@gmail.com>

	* Dialogs/DatabaseConnectionSettingsDialog.cs: Various improvements and bugfixes
	* Commands/SqlEditorCommands.cs, Commands/DataGridCommands.cs: Commands
	* Dialogs/WaitDialog.cs: Dialog to alert the user of progress during a
	background operation
	* Widgets/DataGrid/Visualizers/DataGridItemCommandHandler.cs: Command
	Handler for DataGrid context menu's
	* Widgets/DataGrid/Visualizers/AbstractDataGridVisualizer.cs: Abstract
	Visualizer implementation
	* Widgets/DatabaseConnectionContextComboBox.cs: ComboBox to list all
	DatabaseConnectionContexts
	* Widgets/SqlEditorWidget.cs: re-useable sql editor with syntax highlighting
	* MonoDevelop.Database.Components.addin.xml: addin definitions

2007-07-18  Ben Motmans <ben.motmans@gmail.com>

	* Dialogs/DatabaseConnectionSettingsDialog.cs: Do not make the name entry and provider combo
	insensitive when the custom connection string checkbutton is activated

2007-07-17  Ben Motmans <ben.motmans@gmail.com>

	* Makefile.am: initial makefile
	* Widgets/ConnectionComboBox.cs, Dialogs/ShowXmlTreeDialog.cs, Dialogs/PasswordDialog.cs:
	removed obsolete classes
	* Dialogs/DatabaseConnectionSettingsDialog.cs: improved connection settings dialog, fixes most of the old bugs

2007-07-14  Ben Motmans <ben.motmans@gmail.com>

	* Widgets/DataGrid/*: New DataGrid widget, with support for data visualizers and content based renderers
	* Dialogs/ShowTextDialog.cs: Text visualization widget for the DataGrid control
	* Dialogs/ShowImageDialog.cs: Image visualization widget for the DataGrid control
	* Dialogs/ShowXmlTreeDialog.cs: XML visualization widget for the DataGrid control
	* Codons/DataGridContentRendererCodon.cs: Codon to add content renderers to the datagrid control
	* Codons/DataGridVisualizerCodon.cs: Codon to add visualizers to the datagrid control

2007-07-10  Ben Motmans <ben.motmans@gmail.com>

	* Dialogs/ConnectionDialog.cs: imported from ConnectionManager project, added CheckBox