@@ -13,7 +13,11 @@
   </object>
   <object type="MonoDevelop.Database.Components.SelectColumnWidget" palette-category="widget" allow-children="false" base-type="Gtk.ScrolledWindow">
     <itemgroups />
-    <signals />
+    <signals>
+      <itemgroup label="SelectColumnWidget Signals">
+        <signal name="ColumnToggled" />
+      </itemgroup>
+    </signals>
   </object>
   <object type="MonoDevelop.Database.Components.SqlEditorWidget" palette-category="widget" allow-children="false" base-type="Gtk.Bin">
     <itemgroups>
@@ -22,6 +26,10 @@
         <property name="Editable" />
       </itemgroup>
     </itemgroups>
-    <signals />
+    <signals>
+      <itemgroup label="SqlEditorWidget Signals">
+        <signal name="TextChanged" />
+      </itemgroup>
+    </signals>
   </object>
 </objects>
